--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </li>
             <li>
                 <h4>Nucleo MotoPecas LTDAME.</h4>
-                <p>Baoconista - 25/05/2020 - Atualmente</p>
+                <p>Balconista - 25/05/2020 - Atualmente</p>
             </li>
             <!-- Adicione mais experiências conforme necessário -->
         </ul>
